# learning_opengl

./: .gitignore  CMakeLists.txt  Pipeline.md  Transform.md  main.cpp
imgui/: scene_control.cpp  scene_control.h
include/: camera.h  gl_textures.h  global_include.h  interaction.h  models.h  render_loop.h  scene.h
include/glad/: glad.h
models/: mesh.cpp  mesh.h  models.cpp  models.h
shaders/: f.frag  shaders.cpp  shaders.h
shaders/playground/: obj.frag
shaders/playground/phase01/: obj.frag
shaders/playground/phase02_texture_mapping/: obj.frag  obj.vert
shaders/playground/phase03_light_source/: obj.frag  obj.vert
shaders/playground/phase04_normal_mapping/: box.frag  light.frag  plane.vert
shaders/playground/phase05_height_mapping/: obj.frag  obj.vert
shaders/playground/phase06_shadow_mapping/: depth.frag  obj.frag
shaders/shader_file/: f.frag  v.vert
shaders/shader_file/MSAA_base/: base.frag  frame.frag
shaders/shader_file/SSAO/: geom_pass.vert  light_pass.frag
shaders/shader_file/blend_base/: grass.frag  transparent.frag
shaders/shader_file/blinn_phong_base/: base.frag
shaders/shader_file/defer_base/: G_buffer.frag  deferred_shading.frag
shaders/shader_file/framebuffer_base/: base.vert  frame.frag
shaders/shader_file/geometry_base/: explode.geom  geo.frag  geo.geom  geo.vert  house.geom  model.vert  visual_norm.vert
shaders/shader_file/geometry_explode/: explode.geom  model.vert
src/: camera.cpp  gl_textures.cpp  glad.c  interaction.cpp  mesh.cpp  models.cpp  render_loop.cpp  scene.cpp
textures/: gl_textures.cpp  gl_textures.h
(+34 files in other folders)
